[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/menus/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/GUILabel.tscn" type="PackedScene" id=2]

[node name="OptionsMenu" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 500.0
margin_bottom = 120.0
tab_align = 0

[node name="Visual" type="VBoxContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Fullscreen" type="HBoxContainer" parent="TabContainer/Visual"]
margin_right = 492.0
margin_bottom = 40.0

[node name="GUILabel" parent="TabContainer/Visual/Fullscreen" instance=ExtResource( 2 )]
margin_top = 9.0
margin_right = 412.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Fullscreen"

[node name="Toggle" type="CheckButton" parent="TabContainer/Visual/Fullscreen"]
margin_left = 416.0
margin_right = 492.0
margin_bottom = 40.0

[node name="Vsync" type="HBoxContainer" parent="TabContainer/Visual"]
margin_top = 44.0
margin_right = 492.0
margin_bottom = 84.0

[node name="GUILabel" parent="TabContainer/Visual/Vsync" instance=ExtResource( 2 )]
margin_top = 9.0
margin_right = 412.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "VSync"

[node name="Toggle" type="CheckButton" parent="TabContainer/Visual/Vsync"]
margin_left = 416.0
margin_right = 492.0
margin_bottom = 40.0

[node name="Audio" type="VBoxContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Master" type="HBoxContainer" parent="TabContainer/Audio"]
margin_right = 492.0
margin_bottom = 20.0

[node name="Master" parent="TabContainer/Audio/Master" instance=ExtResource( 2 )]
margin_right = 456.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Master"

[node name="Percentage" parent="TabContainer/Audio/Master" instance=ExtResource( 2 )]
margin_left = 460.0
margin_right = 492.0
margin_bottom = 20.0
text = "100%"

[node name="MasterSlider" type="HSlider" parent="TabContainer/Audio"]
margin_top = 24.0
margin_right = 492.0
margin_bottom = 40.0
min_value = -60.0
max_value = 0.0

[node name="Music" type="HBoxContainer" parent="TabContainer/Audio"]
margin_top = 44.0
margin_right = 492.0
margin_bottom = 64.0

[node name="Music" parent="TabContainer/Audio/Music" instance=ExtResource( 2 )]
margin_right = 456.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Music"

[node name="Percentage" parent="TabContainer/Audio/Music" instance=ExtResource( 2 )]
margin_left = 460.0
margin_right = 492.0
margin_bottom = 20.0
text = "100%"

[node name="MusicSlider" type="HSlider" parent="TabContainer/Audio"]
margin_top = 68.0
margin_right = 492.0
margin_bottom = 84.0
min_value = -60.0
max_value = 0.0

[node name="Effects" type="HBoxContainer" parent="TabContainer/Audio"]
margin_top = 88.0
margin_right = 492.0
margin_bottom = 108.0

[node name="Effects" parent="TabContainer/Audio/Effects" instance=ExtResource( 2 )]
margin_right = 456.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Effects"

[node name="Percentage" parent="TabContainer/Audio/Effects" instance=ExtResource( 2 )]
margin_left = 460.0
margin_right = 492.0
margin_bottom = 20.0
text = "100%"

[node name="EffectsSlider" type="HSlider" parent="TabContainer/Audio"]
margin_top = 112.0
margin_right = 492.0
margin_bottom = 128.0
min_value = -60.0
max_value = 0.0

[node name="Misc" type="VBoxContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ShowFPS" type="HBoxContainer" parent="TabContainer/Misc"]
margin_right = 492.0
margin_bottom = 40.0

[node name="GUILabel" parent="TabContainer/Misc/ShowFPS" instance=ExtResource( 2 )]
margin_top = 10.0
margin_right = 412.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Show FPS"

[node name="Toggle" type="CheckButton" parent="TabContainer/Misc/ShowFPS"]
margin_left = 416.0
margin_right = 492.0
margin_bottom = 40.0
[connection signal="visibility_changed" from="." to="." method="_on_OptionsMenu_visibility_changed"]
[connection signal="toggled" from="TabContainer/Visual/Fullscreen/Toggle" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="TabContainer/Visual/Vsync/Toggle" to="." method="_on_VSync_toggled"]
[connection signal="value_changed" from="TabContainer/Audio/MasterSlider" to="." method="_on_volume_changed" binds= [ 0 ]]
[connection signal="value_changed" from="TabContainer/Audio/MusicSlider" to="." method="_on_volume_changed" binds= [ 1 ]]
[connection signal="value_changed" from="TabContainer/Audio/EffectsSlider" to="." method="_on_volume_changed" binds= [ 2 ]]
[connection signal="toggled" from="TabContainer/Misc/ShowFPS/Toggle" to="." method="_on_ShowFPS_toggled"]
